dev/order/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: yas-dev
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: ghcr.io/nashtech-garage/yas-order:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
